fix poster size and small css alignments on detail page (#63)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,6 +36,9 @@
 .poster-width {
   width: 100%;
 }
+.company-logo-margin {
+  margin-right: 1em;
+}
 
 /* searchForm */
 .result-list-width {
